--- a/MVC/appsettings.json
+++ b/MVC/appsettings.json
@@ -11,6 +11,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CinemaDbContextConnection": "Server=DESKTOP-IN16GJU;Database=CinemaDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CinemaDbContextConnection": "Server=DESKTOP-IN16GJU;Database=CinemaDb;Trusted_Connection=True;"
   }
 }
